--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -13,7 +13,7 @@
 
   color-scheme: light dark
   color: $textColor
-  background-color: $bgColor
+  background-color: #000
 
   font-synthesis: none
   text-rendering: optimizeLegibility
