--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -5,7 +5,6 @@
   margin: 0
   padding: 0
   box-sizing: border-box
-
 :root
   font-family: Poppins, Inter, system-ui, Avenir, Helvetica, Arial, sans-serif
   line-height: 1.5
@@ -19,15 +18,17 @@
   text-rendering: optimizeLegibility
   -webkit-font-smoothing: antialiased
   -moz-osx-font-smoothing: grayscale
+  -webkit-tap-highlight-color: transparent
 
 html, body
   width: 100%
   height: 100%
   overflow: hidden
 
-a
+a ,button, input
   text-decoration: none
   color: $textColor
+  border: none
 
 li
   list-style: none
