change bg color

--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -12,7 +12,7 @@
 
   color-scheme: light dark
   color: $textColor
-  background-color: #000
+  background-color: $bgColor
 
   font-synthesis: none
   text-rendering: optimizeLegibility
